--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-langgraph==0.0.51
-langchain==0.1.16
-langchain-core==0.1.52
-langchain-community==0.0.34
-langsmith==0.1.18
+langgraph==0.6.3
+langchain==0.3.27
+langchain-core==0.3.72
+langchain-community==0.3.26
+langchain-ollama==0.3.6
+langchain-chroma==0.2.5
+langchain-text-splitters==0.3.9
+langsmith==0.4.4
 chromadb==1.0.13
 sentence-transformers==4.1.0
 faiss-cpu==1.11.0
